# rust-sakura-serve

./: .env.example  .gitignore  Cargo.toml  readme.md
data/db/: carts.json  favorites.json  products.json  promocodes.json  users.json
resources/: res.lib
src/: main.rs
src/app/www/: default.html
src/config/: mod.rs
src/controllers/: auth_controller.rs  carts_controller.rs  favorites_controller.rs  mod.rs  orders_controller.rs  promocodes_controller.rs  users_controller.rs
src/models/: product.rs  user.rs
src/routes/: app_routes.rs  auth_routes.rs  mod.rs  store_routes.rs  users_routes.rs
src/state/: app_state.rs
src/utils/: cart_store.rs  error.rs  favorites_store.rs  func.rs  logger.rs  mod.rs  orders_store.rs  promo_codes_store.rs  user_store.rs
